# AspireTemplate.ApiService/Domain/models/NotFoundError.cs
@@ -1,18 +1,0 @@
-// Copyright (c) Microsoft Corporation. All rights reserved.
-// Licensed under the MIT License.
-// <auto-generated />
-
-using System;
-using System.Text.Json;
-using System.Text.Json.Serialization;
-
-namespace PersonAPI.Service.Models
-{
-
-    public partial class NotFoundError : Error
-    {
-        public object StatusCode { get; set; }
-
-
-    }
-}
